minor changes to accomodate jwt cookies, ad other minor errors